<resources>
    <string name="app_name">Gaslands Builder</string>
    <string name="create_vehicle">Create vehicle</string>
    <string name="car_name">Car name:</string>
    <string name="carNameHint">Judgement Deliverer</string>
    <string name="cans">cans:</string>
    <string name="build_slots">build slots:</string>
    <string name="add_weapon">Add weapon</string>
    <string name="mount">Mount:</string>
    <string name="cost">Cost:</string>
    <string name="about_greet">Greetings my fellow Gaslander.</string>
    <string name="about_text">
    The Gaslands Builder was created because I wanted to learn how to write Android apps. Its source
        code is open on GitHub.
    I had great fun with it and it is highly possible that the app will develop. But since most of
    the time I am focused on family life and my PhD in chemistry the development may take awhile.</string>
    <string name="about_support">If you like the app, find it useful and want to support and encourage my efforts click the
        Support button on top. I would appreciate stars and watchers on my GitHub account. You may also provide me a cup of coffee.
    </string>
    <string name="overflow_menu_delete">Delete</string>
    <string name="overflow_menu_view">View</string>
    <string name="overflow_menu_edit">Edit</string>
    <string name="Car_of_the_month_author">App developer</string>
    <string name="car_of_the_month_text">Still WIP.</string>
    <string name="car_of_the_month_image_name">cotm0001.jpeg</string>

</resources>